--- a/code/css/datalist.css
+++ b/code/css/datalist.css
@@ -175,6 +175,7 @@
             position: absolute;
             left: 50px;
             top: 135px;
+            z-index: 99;
         }
         .list-li{
             display: none;
@@ -517,6 +518,25 @@
         }
         .product-information .pop-wrapper {
             position: relative;
+        }
+        .cart-list {
+            position: fixed;
+            top: 50px;
+            right: 10px;
+            padding: 10px;
+            width: 40px;
+            border: 2px solid #000;
+            text-align: center
+        }
+        .cart-list span {
+            border-radius: 10px;
+            text-align: center;
+            width: 20px;
+            height: 20px;
+            line-height: 20px;
+            background: red;
+            color: #fff;
+            display: inline-block
         }
         /* .code-pro {
             border: 1px solid #dedede;
